# shroud

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSE.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-DOCS.md  NOTICE  PRINCIPLES.md  README.md  TRADEMARKS.md  deny.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage.yml  e2e-headless.yml  extended-ci.yml  fuzz-state-machine.yml  integration.yml  release.yml  scheduled.yml  security.yml
assets/: com.shroud.killswitch.policy  shroud-headless.conf.example  shroud.service
assets/sudoers.d/: shroud
aur/: PKGBUILD  shroud.install
autostart/: shroud.desktop
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  GATEWAY.md  HEADLESS.md  INSTALL.md  KILLSWITCH.md  PRINCIPLES.md  README.md  RELEASING.md  RESILIENCE.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_state_machine.rs  fuzz_state_machine_config.rs  fuzz_state_machine_determinism.rs  fuzz_state_machine_differential.rs  fuzz_state_machine_lifecycle.rs  state_machine_common.rs
licenses/: CONTRIBUTOR-LICENSE.md  DEPENDENCY-AUDIT.md  LICENSE-COMMERCIAL.md  LICENSE-DOCS.md  LICENSING.md  THIRD-PARTY-LICENSES
scripts/: audit.sh  aur-test.sh  binary-size.sh  coverage.sh  fuzz.sh  perf-smoke.sh  run-privileged-tests.sh  test-all.sh  test-integration.sh  test-nm-mock.sh  test-quick.sh  test-regression.sh  test-unit.sh  test.sh  update.sh
scripts/lib/: common.sh
src/: autostart.rs  lib.rs  logging.rs  main.rs  mode.rs
src/cli/: args.rs  client.rs  commands.rs  error.rs  handlers.rs  help.rs  import.rs  install.rs  mod.rs  output.rs  server.rs  validation.rs
src/config/: mod.rs  settings.rs
src/daemon/: lock.rs  mod.rs
src/dbus/: mod.rs  monitor.rs  tests.rs  types.rs
src/gateway/: detect.rs  firewall.rs  forwarding.rs  mod.rs  nat.rs  status.rs  tests.rs  validation.rs
src/headless/: config.rs  mod.rs  runtime.rs  runtime_helpers.rs  systemd.rs  tests.rs
src/health/: checker.rs  mod.rs  tests.rs
src/import/: detector.rs  importer.rs  mod.rs  types.rs  validator.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/killswitch/: boot.rs  cleanup.rs  cleanup_logic.rs  firewall.rs  mod.rs  paths.rs  rules.rs  sudo_check.rs  tests.rs  verify.rs
src/nm/: client.rs  connections.rs  mock.rs  mod.rs  parsing.rs  traits.rs
src/notifications/: manager.rs  mod.rs  types.rs
src/state/: machine.rs  mod.rs  types.rs
src/supervisor/: command_validation.rs  config_store.rs  connection_stats.rs  event_loop.rs  handlers.rs  mod.rs  reconnect.rs  reconnect_logic.rs  state_sync.rs  tests.rs  tray_bridge.rs
src/tray/: icons.rs  mod.rs  service.rs  state.rs  tests.rs
src/util/: backoff.rs  mod.rs
systemd/: openvpn-tray.service
tests/: README.md  e2e.rs  integration_cli.rs  integration_import.rs  leak_test.rs  regression.rs  security_crash.rs  security_dbus.rs  security_privilege.rs  security_race.rs  security_signals.rs  stability.rs  validation_integration.rs
tests/chaos/: CHAOS_TESTING.md  README.md  check-leaks.sh  post-test.sh  pre-test.sh  run-all.sh  run-chaos.sh
tests/chaos/scenarios/: 01-sigkill-with-killswitch.sh  02-corrupt-config.sh  03-network-hiccup.sh  04-rapid-switching.sh  05-networkmanager-restart.sh  06-external-control.sh  07-multiple-instances.sh  08-malformed-import.sh  09-fill-tmp.sh  10-delete-config-dir.sh  11-nonexistent-vpn.sh  12-dbus-restart.sh  13-fd-exhaustion.sh  14-suspend-resume.sh  15-killswitch-lan.sh  16-extreme-config.sh
tests/common/: assertions.rs  context.rs  fixtures.rs  mock_dbus.rs  mock_executor.rs  mock_nm.rs  mod.rs  results.rs  system.rs
tests/e2e/: Dockerfile  README.md  lib.sh  run-all.sh  run-in-container.sh  run-privileged.sh  test-boot-killswitch.sh  test-cleanup.sh  test-gateway-detection.sh  test-gateway.sh  test-headless-runtime.sh  test-mode-detection.sh
tests/e2e/desktop/: run-desktop-tests.sh  test-cleanup.sh  test-commands.sh  test-ipc.sh  test-killswitch.sh  test-mode-detection.sh  test-state.sh  test-stress.sh  test-tray-actions.sh
tests/e2e/desktop/results/: .gitkeep
tests/e2e/headless/: run-tests.sh
tests/e2e/results/: .gitignore
tests/integration/: cli_tests.rs  config_tests.rs  daemon_tests.rs  import_tests.rs  mod.rs  state_machine_tests.rs  tray_channel_tests.rs  validation_tests.rs
tests/integration/common/: fixtures.rs  mod.rs
tests/security/: config_tests.rs  crash_tests.rs  dbus_tests.rs  ipc_tests.rs  leak_tests.rs  mod.rs  privilege_tests.rs  race_tests.rs  resource_tests.rs  signal_tests.rs
tests/security/common/: mod.rs
