[package]
name = "openvpn-tray"
version = "2.0.0"
edition = "2021"
description = "A NetworkManager VPN supervisor with system tray UI and auto-reconnect"
authors = ["OpenVPN Tray Contributors"]
license = "MIT"
repository = "https://github.com/loujr/archtools"
readme = "README.md"

# Arch Linux Setup Instructions:
# Install required system packages:
#   sudo pacman -S networkmanager rust
# 
# The application uses:
# - NetworkManager for VPN connection management
# - nmcli for NetworkManager interface
# - D-Bus for StatusNotifierItem (SNI) tray support on KDE Plasma

[dependencies]
# Async runtime - only features we actually need (reduced from "full")
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }

# Native KDE/SNI tray support
ksni = { version = "0.3", features = ["blocking"] }

# Structured logging with RUST_LOG environment variable support
log = "0.4"
env_logger = "0.11"

# Desktop notifications via D-Bus
notify-rust = "4"

# D-Bus for NetworkManager event subscription
zbus = "5"

# Async stream utilities for D-Bus message stream
futures-lite = "2"

# Ctrl-C handler for graceful shutdown
ctrlc = "3.4"

# Lazy static for one-time icon generation
once_cell = "1.19"

# Low-level system calls (flock for instance lock)
libc = "0.2"

[profile.release]
# Link-time optimization for smaller, faster binary
lto = "thin"
# Single codegen unit for better optimization (slightly slower compile)
codegen-units = 1
# Strip debug symbols
strip = true
# Optimize for size with performance (z = size, s = balanced, 3 = speed)
opt-level = "s"
# Abort on panic (smaller binary, no unwinding)
panic = "abort"
