[package]
name = "shroud"
version = "1.16.3"
edition = "2021"
authors = ["loujr"]
description = "A provider-agnostic VPN connection manager for Linux with kill switch, auto-reconnect, and system tray integration"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/loujr/shroud"
homepage = "https://github.com/loujr/shroud"
documentation = "https://github.com/loujr/shroud#readme"
keywords = ["vpn", "openvpn", "networkmanager", "linux", "tray"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"

[[bin]]
name = "shroud"
path = "src/main.rs"

# Arch Linux Setup Instructions:
# Install required system packages:
#   sudo pacman -S networkmanager networkmanager-openvpn nftables iptables sudo
#
# The application uses:
# - NetworkManager for VPN connection management
# - nmcli for NetworkManager interface
# - nftables/iptables for kill switch firewall rules
# - D-Bus for StatusNotifierItem (SNI) tray support on KDE Plasma

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "signal"] }
async-trait = "0.1"

# Native KDE/SNI tray support
ksni = { version = "0.3", features = ["blocking"] }

# Structured logging with RUST_LOG environment variable support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Desktop notifications via D-Bus
notify-rust = { version = "4", default-features = false, features = ["dbus"] }

# D-Bus for NetworkManager event subscription
zbus = "5"

# Async stream utilities for D-Bus message stream
futures-lite = "2"

# Ctrl-C handler for graceful shutdown
ctrlc = "3.4"

# Lazy static for one-time icon generation

# Serialization for config file
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Home directory and filesystem
dirs = "5"
walkdir = "2"

# Low-level system calls (flock for instance lock)
libc = "0.2"
thiserror = "1"
ureq = "3"

# Random number generation (for jitter in exponential backoff)
rand = "0.9"

# Scope-based cleanup for reconnect guard
scopeguard = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "unwind"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"

# ============================================================================
# Test Targets
# ============================================================================

# Integration tests - module interactions with mocks
[[test]]
name = "integration"
path = "tests/integration/mod.rs"

# Security tests - privileged tests for security verification
[[test]]
name = "security"
path = "tests/security/mod.rs"

# Regression tests - verify fixes remain in codebase
[[test]]
name = "regression"
path = "tests/regression.rs"
