[package]
name = "shroud-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
toml = "0.8"

[dependencies.shroud]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_ipc_command"
path = "fuzz_targets/fuzz_ipc_command.rs"
doc = false

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
doc = false

[[bin]]
name = "fuzz_vpn_name"
path = "fuzz_targets/fuzz_vpn_name.rs"
doc = false

[[bin]]
name = "fuzz_state_machine"
path = "fuzz_targets/fuzz_state_machine.rs"
doc = false

[[bin]]
name = "fuzz_state_machine_determinism"
path = "fuzz_targets/fuzz_state_machine_determinism.rs"
doc = false

[[bin]]
name = "fuzz_state_machine_lifecycle"
path = "fuzz_targets/fuzz_state_machine_lifecycle.rs"
doc = false

[[bin]]
name = "fuzz_state_machine_config"
path = "fuzz_targets/fuzz_state_machine_config.rs"
doc = false

[[bin]]
name = "fuzz_state_machine_differential"
path = "fuzz_targets/fuzz_state_machine_differential.rs"
doc = false
